--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,9 @@ typings/
 # dotenv environment variables file
 .env
 
+# Visual Studio Code files
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
