--- a/package.json
+++ b/package.json
@@ -23,12 +23,18 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "corenlp": "^1.3.1",
+    "corenlp-sentiment": "^1.0.1",
+    "dbpedia-sparql-client": "^0.9.8",
     "dbpedia-spotlight": "^0.5.28",
     "express": "^4.16.2",
     "express-uncapitalize": "^1.0.0",
+    "get-json": "^1.0.0",
+    "group-array": "^0.3.3",
     "gulp": "^3.9.1",
     "gulp-nodemon": "^2.2.1",
     "sentiment": "^4.2.0",
-    "wordnet": "^0.1.2"
+    "underscore": "^1.9.1",
+    "wordnet": "^0.1.2",
+    "wordpos": "^1.1.6"
   }
 }
