--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "API for the OpenSem project.",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
@@ -15,7 +16,7 @@
     "nlp"
   ],
   "author": "Martin Timov",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/timov/opensem/issues"
   },
